--- a/Rules
+++ b/Rules
@@ -13,24 +13,17 @@
 #   item, use the pattern “/about/*/”; “/about/*” will also select the parent,
 #   because “*” matches zero or more characters.
 
-compile '/stylesheet/' do
-  # don’t filter or layout
-end
-
 compile '*' do
   unless item.binary?
     case item[:extension]
       when 'md'
         filter :kramdown
     else
-      filter :erb
+      filter :slim
     end
     layout 'default'
+    filter :relativize_paths, type: :html
   end
-end
-
-route '/stylesheet/' do
-  '/style.css'
 end
 
 route '*' do
