--- a/Rules
+++ b/Rules
@@ -13,13 +13,23 @@
 #   item, use the pattern “/about/*/”; “/about/*” will also select the parent,
 #   because “*” matches zero or more characters.
 
+compile 'assets/*' do
+  unless item.binary?
+    case item[:extension]
+      when 'less'
+        filter :less
+    end
+    filter :relativize_paths, type: :css
+  end
+end
+
 compile '*' do
   unless item.binary?
     case item[:extension]
       when 'md'
         filter :kramdown
-    else
-      filter :slim
+      when 'slim'
+        filter :slim
     end
     layout 'default'
     filter :relativize_paths, type: :html
@@ -29,7 +39,10 @@ end
 route '*' do
   if item.binary?
     # Write item with identifier /foo/ to /foo.ext
-    item.identifier.chop + '.' + item[:extension]
+    item.identifier.chop + ".#{item[:extension]}"
+  elsif ['css', 'less'].include?(item[:extension])
+    # Write item with identifier /foo/ to /foo.css
+    item.identifier.chop + ".css"
   else
     # Write item with identifier /foo/ to /foo/index.html
     item.identifier + 'index.html'
